@@ -133,7 +133,7 @@ public class MissionDescriptionSinglePlayer implements IMissionDescription
 	
 	private void setWind(MapWeather.WindLayer layer) throws PWCGException
 	{
-		int windFrom = new Double(MathUtils.adjustAngle (layer.direction, 180)).intValue();		
+		int windFrom = Double.valueOf(MathUtils.adjustAngle (layer.direction, 180)).intValue();		
 		String windCond = "Wind speed is " + layer.speed + " M/S." + 
 				  "\n    Wind direction is " + windFrom + ".";			
 		
